--- a/_talks/2014-03-01-talk-3.md
+++ b/_talks/2014-03-01-talk-3.md
@@ -1,11 +1,11 @@
 ---
-title: "Conference Proceeding talk 3 on Relevant Topic in Your Field"
+title: "Delayed SNNs Poster presentation"
 collection: talks
-type: "Conference proceedings talk"
-permalink: /talks/2014-03-01-talk-3
-venue: "Testing Institute of America 2014 Annual Conference"
-date: 2014-03-01
-location: "Los Angeles, CA"
+type: "Poster presentation"
+permalink: /talks/DSNN-Poster
+venue: "AIHUB's conexion summer school"
+date: 2024-07-03
+location: " Valencia, Spain"
 ---
 
-This is a description of your conference proceedings talk, note the different field in type. You can put anything in this field.
+**Spiking Neural Networks (SNNs)** are emergent models that offer a biologically plausible alternative to Artificial Neural Networks (ANNs) by computing in terms of discrete spikes (a.k.a. events) instead of real-valued activations. Some advantages of using SNNs are sparsity, efficiency and its natural ability to process time-series. In previous works it has been shown that adding learnable synaptic delays to SNNs improves their ability to learn temporal features, reducing the number of layers and parameters needed. This poster covers a study on the **performance of SNNs using learnable synaptic delays** when used to classify a neuromorphic **spatio-temporal** dataset. Click [here](https://mariochf.github.io/files/DSNNPosterAIHUB) to read the full poster.
